Custom copyright text

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,7 @@ languageCode: "ko-kr"
 timeZone: "Asia/Seoul"
 title: "솜니.로그"
 theme: "PaperMod-somni"
+copyright: "Copyright © [somni](https://somni.one)"
 
 hasCJKLanguage: true
 enableRobotsTXT: true
