--- a/hugo.yaml
+++ b/hugo.yaml
@@ -29,6 +29,11 @@ languages:
       homeInfoParams:
         title: "somni.log"
 
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
+
 params:
   author: "somni"
   description: "somni.log: 솜니가 삽질하고 부딪히고 깨지고 경험하고 배운 것들의 아카이브"
