--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = themes/PaperMod-somni
 	url = https://github.com/somnisomni/Hugo-PaperMod-somni
 	branch = main
+[submodule "themes/hugo-admonitions"]
+	path = themes/hugo-admonitions
+	url = https://github.com/KKKZOZ/hugo-admonitions
+	branch = main
