--- a/hugo.yaml
+++ b/hugo.yaml
@@ -20,6 +20,10 @@ languages:
     languageName: "English"
     weight: 2
     title: "somni.log"
+    menu:
+      main:
+        - name: Tags
+          url: tags/
     params:
       description: "somni.log: A humble place where my experiences, mistakes, and learnings are archived."
       homeInfoParams:
@@ -37,6 +41,10 @@ languages:
     languageName: "日本語"
     weight: 3
     title: "somni.log"
+    menu:
+      main:
+        - name: タグ
+          url: tags/
     params:
       homeInfoParams:
         title: "somni.log"
@@ -47,6 +55,11 @@ markup:
       unsafe: true
   highlight:
     lineNos: true
+
+menu:
+  main:
+    - name: 태그
+      url: tags/
 
 params:
   author: "somni"
@@ -61,11 +74,11 @@ params:
   # Temporary disable because there's no translated content yet
   disableLangToggle: true
 
+  contentLicense: "이 블로그의 모든 글은 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed)에 따라 이용할 수 있습니다. (글 내 라이선스가 명시된 일부 콘텐츠 제외)"
+
   homeInfoParams:
     title: "솜니.로그"
     content: "somni.log: 솜니가 삽질하고 부딪히고 깨지고 경험하고 배운 것들의 아카이브"
-
-  contentLicense: "이 블로그의 모든 글은 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed)에 따라 이용할 수 있습니다. (글 내 라이선스가 명시된 일부 콘텐츠 제외)"
 
   socialIcons:
     - name: Homepage
