Specify "tags" as only taxonomies (disable "categories")

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -61,6 +61,9 @@ menu:
     - name: 태그
       url: tags/
 
+taxonomies:
+  tag: tags
+
 params:
   author: "somni"
   description: "somni.log: 솜니가 삽질하고 부딪히고 깨지고 경험하고 배운 것들의 아카이브"
