Enable JSON output & search page

--- a/blog/hugo.yaml
+++ b/blog/hugo.yaml
@@ -66,6 +66,12 @@ menu:
 taxonomies:
   tag: tags
 
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
+
 params:
   author: "somni"
   description: "somni.log: 솜니가 삽질하고 부딪히고 깨지고 경험하고 배운 것들의 아카이브"
