--- a/blog/hugo.yaml
+++ b/blog/hugo.yaml
@@ -82,10 +82,10 @@ params:
   showPostNavLinks: true
   showAllPagesInArchive: true
 
-  # Temporary disable because there's no translated content yet
+  # Temporary disable because there's not enough translated content yet
   disableLangToggle: true
 
-  contentLicense: "이 블로그의 모든 글 및 글에 포함된 콘텐츠는 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed)에 따라 이용할 수 있습니다. (글 내 출처 또는 라이선스가 명시된 일부 콘텐츠 제외)"
+  contentLicense: "이 블로그의 모든 글 및 글에 포함된 콘텐츠는 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed)에 따라 이용할 수 있습니다. <small>(글 내 출처 또는 라이선스가 명시된 일부 콘텐츠 제외)</small>"
 
   homeInfoParams:
     title: "솜니.로그"
