Can specify whether the website is blog

--- a/blog/hugo.yaml
+++ b/blog/hugo.yaml
@@ -110,7 +110,7 @@ params:
       url: "https://github.com/somnisomni"
 
   schema:
-    siteType: "Blog"
+    isBlog: true
     siteOwner:
       name: "somni"
       url: "https://somni.one/"
